[tool.poetry]
name = "nc_app"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <matthias@busykoala.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
